cmake_minimum_required(VERSION 3.26)
project(ejercicioFeedback C)

set(CMAKE_C_STANDARD 11)

add_executable(ejercicioFeedback main.c
        Ejercicio1.c
        Ejercicio2.c
        Ejercicio3.c
        Ejercicio4.cpp
        Ejercicio5.c
        Ejercicio6.c
        Ejercicio7.c
        Ejercicio8.c
        arrayLength.h)
